--- a/react-web-test/src/components/Header/index.less
+++ b/react-web-test/src/components/Header/index.less
@@ -24,11 +24,24 @@
 
     .weather {
       text-align: right;
+      font-size: 14px;
 
       .date {
         margin-right: 15px;
+        vertical-align: middle;
       }
-      
+
+      .weather-img {
+        img {
+          height: 15px;
+        }
+      }
+
+      .weather-detail {
+        margin-left: 5px;
+        vertical-align: middle;
+      }
+
     }
 
   }
