--- a/react-web-test/src/style/common.less
+++ b/react-web-test/src/style/common.less
@@ -1,4 +1,4 @@
-
+@import "./default.less";
 .container {
   display: flex;
 
@@ -7,10 +7,13 @@
     //min-width: 180px;
     height: calc(100vh);
     background-color: #001529;
+    color: #ffffff;
   }
 
   .main {
     //flex: 1;
+    //height: calc(100vh);
+    background-color: @colorL;
     height: calc(100vh);
   }
 
