--- a/react-web-test/src/components/Header/index.less
+++ b/react-web-test/src/components/Header/index.less
@@ -8,6 +8,21 @@
     padding: 0 20px;
     text-align: right;
 
+    .logo {
+      line-height: 60px;
+      text-align: left;
+      font-size: 18px;
+
+      img {
+        height: 40px;
+        vertical-align: middle;
+      }
+
+      span {
+        margin-left: 5px;
+      }
+    }
+
     a {
       margin-left: 40px;
     }
@@ -56,9 +71,14 @@
         margin-left: 5px;
         vertical-align: middle;
       }
-
     }
-
   }
+}
 
+// common 页面简单头
+.simple-page{
+  .header-top{
+    background:#1890ff;
+    color:@colorM;
+  }
 }
