--- a/react-web-test/src/style/common.less
+++ b/react-web-test/src/style/common.less
@@ -1,6 +1,20 @@
 @import "./default.less";
 @import "./loading.less";
 
+ul,li {
+  list-style: none;
+}
+
+// 清除浮动
+.clearfix {
+  &::after {
+    content: ' ';
+    clear: both;
+    display: block;
+    visibility: hidden;
+  }
+}
+
 .container {
   display: flex;
 
@@ -23,5 +37,16 @@
   .content {
     position: relative;
     padding: 20px;
+  }
+}
+
+.content-wrap {
+  background-color: white;
+  border: 1px solid #e8e8e8;
+  margin-top: -3px;
+
+  .ant-table-wrapper {
+    margin-left: -1px;
+    margin-right: -2px;
   }
 }
